force-app/main/default/objects/KCPQ_Customer_Reserve__c/KCPQ_Customer_Reserve__c.object-meta.xml
<CustomObject>
    <label>Customer Reserve</label>
    <nameField>
        <label>Customer Reserve Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Reserves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>