force-app/main/default/objects/KCPQ_Customer_Reserve__c/fields/KCPQ_Customer__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Reserves</relationshipLabel>
    <relationshipName>Customer_Reserves</relationshipName>
    <type>Lookup</type>
</CustomField>