force-app/main/default/objects/KCPQ_Customer_Reserve__c/fields/KCPQ_Item_Reservation_Id__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Item_Reservation_Id__c</fullName>
    <externalId>true</externalId>
    <label>Item Reservation Id</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>