force-app/main/default/objects/KCPQ_Customer_Reserve__c/fields/KCPQ_Location__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>KCPQ_Location__c</referenceTo>
    <relationshipLabel>Customer Reserves</relationshipLabel>
    <relationshipName>Customer_Reserves</relationshipName>
    <type>Lookup</type>
</CustomField>