force-app/main/default/objects/KCPQ_Customer_Reserve__c/fields/KCPQ_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Location_Name__c</fullName>
    <formula>KCPQ_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Name</label>
    <type>Text</type>
</CustomField>