force-app/main/default/objects/KCPQ_Customer_Reserve__c/fields/KCPQ_Priority__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Priority__c</fullName>
    <label>Priority</label>
    <length>100</length>
    <type>Text</type>
</CustomField>