force-app/main/default/objects/KCPQ_Customer_Reserve__c/fields/KCPQ_Product__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Customer Reserves</relationshipLabel>
    <relationshipName>Customer_Reserves</relationshipName>
    <type>Lookup</type>
</CustomField>