force-app/main/default/objects/KCPQ_Customer_Reserve__c/fields/KCPQ_Reserve_Qty__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Reserve_Qty__c</fullName>
    <label>Reserve Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>