force-app/main/default/objects/KCPQ_Customer_Reserve__c/fields/Total_Available_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Inventory__c</fullName>
    <description>Total based on</description>
    <inlineHelpText>Total based on</inlineHelpText>
    <label>Total Available Inventory</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>